# Lab_5_OOP_CPP

./: CMakeLists.txt  README.md
include/: list.h  memory_resource.h
src/: main.cpp
test/: test_list.cpp  test_memory_resource.cpp
